# Astra

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
.github/workflow/: astra.yml
.github/workflows/: astra.yml
src/: bench.cpp  bench.h  datagen.cpp  datagen.h  main.cpp  makefile  ndarray.h  nn-2x768-2x256-1.nnue  nn-2x768-2x512-1.nnue  nn-768-2x1024-1.nnue  nn-768-2x256-1.nnue  nn-768-2x512-1.nnue  options.h  uci.cpp  uci.h  ucioptions.h  util.h
src/bench/: bench.cpp  bench.h
src/chess/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  castling_rights.h  cuckoo.cpp  cuckoo.h  magics.h  misc.cpp  misc.h  movegen.cpp  movegen.h  perft.cpp  perft.h  see.cpp  state.h  state_info.h  types.h  upcoming_repetition.cpp  zobrist.cpp  zobrist.h
src/datagen/: gen_fens.cpp  gen_fens.h
src/engine/: history.cpp  history.h  movepicker.cpp  movepicker.h  search.cpp  search.h  stack.h  threads.cpp  threads.h  timeman.h  tt.cpp  tt.h  tune_params.cpp  tune_params.h
src/eval/: accumulator.cpp  accumulator.h  eval.cpp  eval.h  nnue.cpp  nnue.h
src/fathom/: stdendian.h  tbchess.c  tbchess.cpp  tbconfig.h  tbprobe.c  tbprobe.cpp  tbprobe.h
src/net/: accumulator.cpp  accumulator.h  incbin.h  nnue.cpp  nnue.h
src/nn/: incbin.h
src/nnue/: accum.cpp  accum.h  accumulator.cpp  accumulator.h  aligned_array.h  arch.h  constants.h  nnue.cpp  nnue.h  simd.h  util.h  utils.h
src/search/: history.cpp  history.h  moveordering.cpp  moveordering.h  movepicker.cpp  movepicker.h  pvTable.h  pvtable.h  search.cpp  search.h  searchparams.h  stack.h  syzygy.cpp  syzygy.h  threads.cpp  threads.h  timeman.cpp  timeman.h  timemanager.h  tt.cpp  tt.h  tune.cpp  tune.h  tune_params.cpp  tune_params.h  types.h
src/syzygy/: stdendian.h  tbchess.cpp  tbconfig.h  tbprobe.cpp  tbprobe.h
src/uci/: options.cpp  options.h  uci.cpp  uci.h  uci_options.cpp  uci_options.h
src/weights/: v1.nnue  v2.nnue  v3.nnue  v4.nnue  v5.nnue  v6.nnue  v7.nnue  v8.nnue  v9.nnue
